# bookshelf

./: .env.example  .gitignore  Cargo copy.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.sqlx/: query-0eae7958de37380dee93e9e70d1963780c3598c3614a9d7c6c0c1cfe29fa6f0b.json  query-115f8593e1d117504b0b6ac6f4f51b3ae0bd3f7da145eeabde23cb5826e3c022.json  query-a167687f6ad91347b27efb9a020195a976c91173cd47667b3c71c01479e90fca.json  query-a8f2d245800327d6bd1d1be8219d0e3450d3165d411b2119c9cd996714bc0817.json  query-ae263d7e6d10ce2d3db6902e757fcb024272ba5c955ed3492d64b95c646f3ffa.json  query-be91d1853c3409078c6572545bd234068f7f0c0477b2e4a3b0249e6db702e668.json  query-ee7d520bdee45fd3b902e30013f3975d28b20faef8d5f3b286d12e27d4ac225d.json
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  AuthorList.js  BookDetail.js  BookList.js  GenreList.js  api.js
migrations/: 20241029053524_books.down.sql  20241029053524_books.up.sql  20241029053531_authors.down.sql  20241029053531_authors.up.sql  20241029053536_genres.down.sql  20241029053536_genres.up.sql  20241030090232_authors.down.sql  20241030090232_authors.up.sql
src/: database.rs  main.rs
src/rest/: api.rs  books.rs  mod.rs
src/rest/models/: author.rs  book.rs  config.rs  genre.rs  genres.rs  mod.rs
