[package]
name = "bookshelf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
dotenv = "0.15.0"
serde = "1.0.213"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
