[package]
name = "bookshelf"
description = "Simple API for managing books using axum and utoipa"
version = "0.1.0"
edition = "2021"
authors = ["Frolov Kirill <ffrolov.kirill@yandex.ru>"]

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["macros"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.213"
serde-env = "0.2.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.1.3", features = ["axum_extras"] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
